<resources>
    <string name="app_name" translatable="false">Pesan Botol</string>
    <!--  on boarding  -->
    <string name="title_menu_1">Bagikan Pengalaman</string>
    <string name="title_menu_2">Temukan Hidden Gems </string>
    <string name="title_menu_3">Kumpulkan Badge</string>
    <string name="desc_menu_1">Menyelami indahnya destinasi sembari membagikan pengalaman anda dan buat orang tahu tentang perjalanan anda!</string>
    <string name="desc_menu_2">Jelajahi tempat, kegiatan, dan festival dengan mengetahui informasi yang tersedia di sekitar anda. </string>
    <string name="desc_menu_3">Jadikan profil kamu lebih baik dari yang lain!.  Kunjungi dan selesaikan misi untuk mendapatkan badge-badge unik!</string>
    <string name="Lewati">Lewati</string>
    <string name="Lanjut">Lanjut</string>
    <!--  Bottom Navigation Menu  -->
    <string name="title_bottom_menu_1">Home</string>
    <string name="title_bottom_menu_2">Aktivitas</string>
    <string name="title_bottom_menu_3">Akun</string>
    <!--  Auth  -->
    <string name="imageauth" translatable="false">imageAuth</string>
    <string name="i_agree_with_terms_and_privacy">Saya setuju dengan <font color='#01C6DB'>Terms</font> dan <font color='#01C6DB'>Privacy</font> </string>
    <string name="email" translatable="false">Email</string>
    <string name="name" translatable="false">Nama</string>
    <string name="password" translatable="false">Password</string>
    <string name="passwordLength" translatable="false">Your Passwords must match and must be at least 6 characters in length</string>
    <string name="sign_up" translatable="false">Daftar</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="log_in"> <u>Masuk</u></string>
    <string name="login">Masuk</string>
    <string name="don_t_have_an_account">Belum punya akun?</string>
    <string name="signUp"><u>Daftar</u></string>

    <!--  Activity Page  -->
    <string name="tv_location">Lokasi saat ini</string>
    <string name="user_current_location" translatable="false">Kudus, Central Java</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="profile_user" translatable="false">Profile User</string>
    <string name="your_latest_activity">Aktivitas Terakhir</string>
    <string name="dummy_name" translatable="false">Arby Azra</string>
    <string name="dummy_location" translatable="false">Tegal, Central Java, Indonesia</string>
    <string name="dummy_bio" translatable="false">Aku adalah anak gembala Selalu riang serta gembira</string>
    <string name="descriptionLogin">Selamat datang!\nSilahkan masuk atau mendaftar</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="descSignup">Daftar untuk menikmati fitur-fitur menarik dan pamerkan pengalaman kamu ke orang lain</string>
    <string name="title_activity_detail_message" translatable="false">DetailMessageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="lihat_semua" translatable="false"><u> Lihat Semua </u></string>
    <string name="edit_profile" translatable="false"> <u> Edit Profile</u></string>

    <!--  String used for tabs layout follower following  -->
    <string name="tab_followers" translatable="false">Followers</string>
    <string name="tab_following" translatable="false">Following</string>

    <!--    dummy data  -->
    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>
    <string-array name="description">
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
        <item>Pedagangnya tadi baik banget. Aku ngga beli tapi dikasih gaess 😭😭😭😭😭..</item>
    </string-array>
    <string-array name="dates">
        <item>12 jam yang lalu</item>
        <item>1 menit yang lalu</item>
        <item>3 detik yang lalu</item>
        <item>9 jam yang lalu</item>
        <item>2 jam yang lalu</item>
        <item>12 jam yang lalu</item>
        <item>19 jam yang lalu</item>
        <item>7 jam yang lalu</item>
        <item>8 jam yang lalu</item>
        <item>12 jam yang lalu</item>
    </string-array>
    <string-array name="avatar">
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
        <item>https://i.ibb.co/T4kF9wC/monyet.jpg</item>
    </string-array>
</resources>