<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_on_boarding_scene"
    tools:context=".OnBoardingActivity">

    <ImageView
        android:id="@+id/iv_menu_1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/exampleauth"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/tv_title_menu_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_1"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="439dp" />

    <TextView
        android:id="@+id/tv_desc_menu_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_1"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="378dp" />

    <ImageView
        android:id="@+id/iv_menu_2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/exampleauth"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/tv_title_menu_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_2"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="439dp" />

    <TextView
        android:id="@+id/tv_desc_menu_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_2"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="378dp" />

    <ImageView
        android:id="@+id/iv_menu_3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/exampleauth"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/tv_title_menu_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_3"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="439dp" />

    <TextView
        android:id="@+id/tv_desc_menu_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_3"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="378dp" />

    <Button
        android:id="@+id/button_lanjut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/Lanjut"
        tools:layout_editor_absoluteX="322dp"
        tools:layout_editor_absoluteY="667dp" />
</androidx.constraintlayout.motion.widget.MotionLayout>