<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.pesanbotol.android.app.activity.fragment.HomeFragment"
        android:label="@string/title_bottom_menu_1"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/aktivitasFragment"
        android:name="com.pesanbotol.android.app.activity.fragment.AktivitasFragment"
        android:label="@string/title_bottom_menu_2"
        tools:layout="@layout/fragment_aktivitas" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.pesanbotol.android.app.activity.fragment.AccountFragment"
        android:label="@string/title_bottom_menu_3"
        tools:layout="@layout/fragment_account" />
</navigation>